; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-thread.c_adjust_threads_affinity.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-thread.c_adjust_threads_affinity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lwan = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [37 x i8] c"Could not set affinity for thread %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lwan*, i64*, i64)* @adjust_threads_affinity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @adjust_threads_affinity(%struct.lwan* %0, i64* %1, i64 %2) #0 {
  %4 = alloca %struct.lwan*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store %struct.lwan* %0, %struct.lwan** %4, align 8
  store i64* %1, i64** %5, align 8
  store i64 %2, i64* %6, align 8
  store i64 0, i64* %7, align 8
  br label %9

9:                                                ; preds = %39, %3
  %10 = load i64, i64* %7, align 8
  %11 = load %struct.lwan*, %struct.lwan** %4, align 8
  %12 = getelementptr inbounds %struct.lwan, %struct.lwan* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ult i64 %10, %14
  br i1 %15, label %16, label %42

16:                                               ; preds = %9
  %17 = call i32 @CPU_ZERO(i32* %8)
  %18 = load i64*, i64** %5, align 8
  %19 = load i64, i64* %7, align 8
  %20 = load i64, i64* %6, align 8
  %21 = and i64 %19, %20
  %22 = getelementptr inbounds i64, i64* %18, i64 %21
  %23 = load i64, i64* %22, align 8
  %24 = call i32 @CPU_SET(i64 %23, i32* %8)
  %25 = load %struct.lwan*, %struct.lwan** %4, align 8
  %26 = getelementptr inbounds %struct.lwan, %struct.lwan* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 1
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %27, align 8
  %29 = load i64, i64* %7, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i64 %29
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i64 @pthread_setaffinity_np(i32 %32, i32 4, i32* %8)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %16
  %36 = load i64, i64* %7, align 8
  %37 = call i32 @lwan_status_warning(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i64 %36)
  br label %38

38:                                               ; preds = %35, %16
  br label %39

39:                                               ; preds = %38
  %40 = load i64, i64* %7, align 8
  %41 = add i64 %40, 1
  store i64 %41, i64* %7, align 8
  br label %9

42:                                               ; preds = %9
  ret void
}

declare dso_local i32 @CPU_ZERO(i32*) #1

declare dso_local i32 @CPU_SET(i64, i32*) #1

declare dso_local i64 @pthread_setaffinity_np(i32, i32, i32*) #1

declare dso_local i32 @lwan_status_warning(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
